Añadir descripciones de algoritmos y mejoras en la interfaz de usuario.
Se han añadido etiquetas descriptivas a los formularios que explican cada algoritmo de discretización de líneas y círculos. Se ha mejorado el diseño y la posición de los controles para facilitar su uso. Se ha mejorado el algoritmo de recorte de puntos medios para gestionar la profundidad de recursividad y la sujeción de segmentos de forma más sólida. Se han eliminado los archivos frmHome que no se utilizaban.

--- a/DiscretizacionCirculosApp/Circulos/frmAlgoritmoBresenhamCirculos.resx
+++ b/DiscretizacionCirculosApp/Circulos/frmAlgoritmoBresenhamCirculos.resx
@@ -117,4 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label8.Text" xml:space="preserve">
+    <value>Genera los puntos de un círculo usando un criterio de decisión entero. Comienza en un punto del borde y, en cada paso,
+decide si el siguiente punto se mueve lateral o diagonalmente, aprovechando la simetría de 8 octantes para dibujar todo
+el círculo de forma eficiente.</value>
+  </data>
 </root>
